--- a/customerForm.html
+++ b/customerForm.html
@@ -56,6 +56,72 @@
             <h4 class="viewCustomerTitle">View Customers</h4>
         </div>
     </div>
+
+    <div class="tableDiv customerTable">
+        <table class="table">
+            <thead>
+            <tr>
+                <th class="OrderTableHead " scope="col">Customer_Id</th>
+                <th class="OrderTableHead" scope="col">Name</th>
+                <th class="OrderTableHead" scope="col">Telephone</th>
+                <th class="OrderTableHead" scope="col">City</th>
+            </tr>
+            </thead>
+            <tbody id="orderTable">
+            <tr>
+                <th class="orderTableBody" scope="row">1</th>
+                <td class="orderTableBody">Mark</td>
+                <td class="orderTableBody">Otto</td>
+                <td class="orderTableBody">@mdo</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">2</th>
+                <td class="orderTableBody">Jacob</td>
+                <td class="orderTableBody">Thornton</td>
+                <td class="orderTableBody">@fat</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">3</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">5</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">6</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">7</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </section>
 
 
