--- a/customerForm.html
+++ b/customerForm.html
@@ -13,8 +13,9 @@
     <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <i class="bi bi-cart4"></i>
-                <a id="DashGroStore" class="navbar-brand" href="#">Fresh Mart</a>
+                <div class="logo">
+                    <img src="assets/img/dashBoardLogo.png" id="logo">
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,6 +26,7 @@
                         <a class="nav-link active" href="customerForm.html">Customer</a>
                         <a class="nav-link active" href="itemForm.html">Item</a>
                         <a class="nav-link active" href="orderForm.html">Place Order</a>
+                        <a class="nav-link active" href="orderForm.html">Log Out</a>
                     </div>
                 </div>
             </div>
