--- a/itemForm.html
+++ b/itemForm.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Item Form</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 <body>
@@ -12,7 +13,9 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a id="DashGroStore" class="navbar-brand" href="#">Fresh Mart</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -32,16 +35,23 @@
     <div>
         <div class="container-fluid searchBarParent">
             <div id="searchBar" class="input-group mb-3">
-                <input id="searchInputField" type="text" class="form-control" placeholder="Search Items" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input id="searchInputField" type="text" class="form-control" placeholder="Search Items"
+                       aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
             </div>
         </div>
 
         <div id="crudButton" class="relativePosition">
             <div class="absolutePosition">
-                <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#newModal" type="button">New</button>
-                <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#updateModal" type="button">Update</button>
-                <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#removeModal" type="button">Remove</button>
+                <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" data-bs-toggle="modal"
+                        data-bs-target="#saveitems" type="button">Save
+                </button>
+                <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor"
+                        data-bs-toggle="modal" data-bs-target="#updateitems" type="button">Update
+                </button>
+                <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor"
+                        data-bs-toggle="modal" data-bs-target="#deleteitems" type="button">Delete
+                </button>
             </div>
         </div>
     </div>
@@ -88,28 +98,28 @@
 
             <tr>
                 <th class="orderTableBody" scope="row">4</th>
-                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">Larry the Bird</td>
                 <td class="orderTableBody">@twitter</td>
                 <td class="orderTableBody">@twitter</td>
             </tr>
 
             <tr>
                 <th class="orderTableBody" scope="row">5</th>
-                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">Larry the Bird</td>
                 <td class="orderTableBody">@twitter</td>
                 <td class="orderTableBody">@twitter</td>
             </tr>
 
             <tr>
                 <th class="orderTableBody" scope="row">6</th>
-                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">Larry the Bird</td>
                 <td class="orderTableBody">@twitter</td>
                 <td class="orderTableBody">@twitter</td>
             </tr>
 
             <tr>
                 <th class="orderTableBody" scope="row">7</th>
-                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">Larry the Bird</td>
                 <td class="orderTableBody">@twitter</td>
                 <td class="orderTableBody">@twitter</td>
             </tr>
@@ -117,7 +127,95 @@
         </table>
     </div>
 </section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<!--save Items modal-->
+<div class="modal" tabindex="-1" id="saveitems">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add New Items</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="item_id" class="form-label ">Item Id</label>
+                <input type="text" id="item_id" class="form-control" placeholder="enter id"
+                       aria-label="item_id">
+
+                <label for="item_name" class="form-label ">Item Name</label>
+                <input type="text" id="item_name" class="form-control" placeholder="enter name"
+                       aria-label="item_name">
+
+                <label for="quantity" class="form-label ">Quanity</label>
+                <input type="text" id="quantity" class="form-control" placeholder="enter quantity" aria-label="quantity">
+
+                <label for="price" class="form-label ">Price</label>
+                <input type="text" id="price" class="form-control" placeholder="enter price"
+                       aria-label="price">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--update Items modal-->
+<div class="modal" tabindex="-1" id="updateitems">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Update Items</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="i_id" class="form-label ">Item Id</label>
+                <input type="text" id="i_id" class="form-control" placeholder="enter id" aria-label="item_Id">
+
+                <label for="i_name" class="form-label ">Item Name</label>
+                <input type="text" id="i_name" class="form-control" placeholder="enter name" aria-label="item_name">
+
+                <label for="i_quanity" class="form-label ">Quantity</label>
+                <input type="text" id="i_quanity" class="form-control" placeholder="enter quantity" aria-label="quantity">
+
+                <label for="i_price" class="form-label ">Price</label>
+                <input type="text" id="i_price" class="form-control" placeholder="enter price"
+                       aria-label="price">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Update</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--delete Items modal-->
+<div class="modal" tabindex="-1" id="deleteitems">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Items</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="id" class="form-label ">Item Id</label>
+                <input type="text" id="id" class="form-control" placeholder="enter id" aria-label="item_id">
+
+                <label for="name" class="form-label ">Item Name</label>
+                <input type="text" id="name" class="form-control" placeholder="enter name" aria-label="item_name">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
