--- a/orderForm.html
+++ b/orderForm.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <title>Order Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="assets/css/order.css">
 </head>
 <body>
 <header id="header">
     <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a id="DashGroStore" class="navbar-brand" href="#">Fresh Mart</a>
+                <div class="logo">
+                    <img src="assets/img/dashBoardLogo.png" id="logo">
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
