--- a/itemForm.html
+++ b/itemForm.html
@@ -13,7 +13,9 @@
     <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a id="DashGroStore" class="navbar-brand" href="#">Fresh Mart</a>
+                <div class="logo">
+                    <img src="assets/img/dashBoardLogo.png" id="logo">
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
