--- a/index.html
+++ b/index.html
@@ -36,6 +36,34 @@
     </nav>
 </header>
 
+<!--login page-->
+<div id="main" class="container-fluid  justify-content-center container shadow-card left-box "  >
+    <span class="welcome">Welcome to the </span>
+    <span class="GreenCart" >GreenCart </span>
+    <h5>Hello! let's get started</h5>
+    <form id="form"  >
+        <div class="mb-3 mt-5 ms-3 me-3 userName justify-content-center " >
+            <label for="InputUserName" class="form-label">Enter your username</label>
+            <input type="text" class="form-control " id="InputUserName" aria-describedby="passwordHelp" placeholder="username">
+        </div>
+        <div  class="mb-3 ms-3 me-3 password justify-content-center" >
+            <label for="InputPassword1" class="form-label" >Enter your password </label>
+            <input type="password" class="form-control" id="InputPassword1" placeholder="password">
+            <div class="form-text passwordHelp">Forget password?</div>
+        </div>
+        <div class="d-flex ">
+            <button  type="submit" class="btn btn-primary me-3 signIn">SIGN IN</button>
+        </div>
+
+        <div class="noAcc">
+            <span>Don't have an account?</span>
+            <a href="signUp.html">Create</a>
+        </div>
+    </form>
+</div>
+
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
