--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 </header>
 
 <!--login page-->
-<div id="main" class="container-fluid  justify-content-center container shadow-card left-box "  >
+<div id="signUp" class="container-fluid  justify-content-center container shadow-card left-box "  >
     <span class="welcome">Welcome to the </span>
     <span class="GreenCart" >GreenCart </span>
     <h5>Hello! let's get started</h5>
-    <form id="form"  >
+    <form id="signUpForm"  >
         <div class="mb-3 mt-5 ms-3 me-3 userName justify-content-center " >
             <label for="InputUserName" class="form-label">Enter your username</label>
             <input type="text" class="form-control " id="InputUserName" aria-describedby="passwordHelp" placeholder="username">
@@ -62,6 +62,27 @@
     </form>
 </div>
 
+<!--sign up page-->
+
+<div id="main" class="container-fluid  justify-content-center container shadow-card left-box "  >
+    <span class="welcome">Welcome to the </span>
+    <span class="GreenCart" >Green Cart </span>
+    <h5>Sign Up Here</h5>
+    <form id="form"  >
+        <div class="mb-3 mt-5 ms-3 me-3 userName justify-content-center " >
+            <label for="InputUserName" class="form-label">Enter your username</label>
+            <input type="text" class="form-control " id="userNameSignUp" aria-describedby="passwordHelp">
+        </div>
+        <div  class="mb-3 ms-3 me-3 password justify-content-center" >
+            <label for="InputPassword1" class="form-label">Enter your password </label>
+            <input type="password" class="form-control" id="signUpPassword">
+
+        </div>
+        <div class="d-flex ">
+            <button  type="submit" class="btn btn-primary me-3 signIn">SIGN UP</button>
+        </div>
+    </form>
+</div>
 
 
 
