--- a/index.html
+++ b/index.html
@@ -84,7 +84,282 @@
     </form>
 </div>
 
+<!--dashboard form-->
+<section class="container mt-5">
+    <section class="row  d-flex align-items-center justify-content-center  " style="text-align: center" id="cards">
+        <div class="card text-bg-primary mb-3 " style="max-width: 15rem; " id="card1">
+            <div class="card-header">Total Customers</div>
+            <div class="card-body">
+                <h4 class="card-title">5</h4>
+                <img src="assets/img/customers.png" alt="">
+            </div>
+        </div>
 
+        <div class="container card text-bg-primary mb-3" style="max-width: 15rem;" id="card2">
+            <div class="card-header">Total Orders</div>
+            <div class="card-body">
+                <h4 class="card-title">5</h4>
+                <img id="orders" src="assets/img/orders2.png" alt="">
+            </div>
+        </div>
+
+        <div class="card text-bg-primary mb-3" style="max-width: 15rem;" id="card3">
+            <div class="card-header">Total Income</div>
+            <div class="card-body">
+                <h4 class="card-title">5</h4>
+                <img src="assets/img/income.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <div class=" searchBarParent col-4 ml-1" id="searchOrder">
+        <div id="searchBar" class="input-group mb-3">
+            <input id="searchInputField" type="text" class="form-control" placeholder="Search orders"
+                   aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+        </div>
+    </div>
+
+    <div class="dashBordTable">
+        <table class="table" >
+            <thead>
+            <tr class="table-info">
+                <th scope="col">Order_id</th>
+                <th scope="col">Customer</th>
+                <th scope="col">Item</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Discount</th>
+                <th scope="col">Price</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <th scope="row">4</th>
+                <td>@twitter</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+
+            </tr>
+            <tr>
+                <th scope="row">5</th>
+                <td>@twitter</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+</section>
+
+<!--customer form-->
+<section class="container mt-5">
+    <div>
+        <div class=" searchBarParent">
+            <div id="searchBar" class="input-group mb-3">
+                <input id="searchInputField" type="text" class="form-control" placeholder="Search Customer"
+                       aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+            </div>
+        </div>
+
+        <div id="crudButton" class="relativePosition">
+            <div class="absolutePosition">
+                <button id="saveBtn" class="noBorder btn btn-outline-secondary newButton whiteTextColor"
+                        data-bs-toggle="modal"
+                        data-bs-target="#savecustomer" type="button">Save
+                </button>
+                <button id="updateBtn"
+                        class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor"
+                        data-bs-toggle="modal" data-bs-target="#updatecustomer" type="button">Update
+                </button>
+                <button id="deleteBtn" class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor"
+                        data-bs-toggle="modal" data-bs-target="#deletecustomer" type="button">Delete
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div id="d1" class="row margin col-sm-4 col-xs">
+            <h4 class="viewCustomerTitle">View Customers</h4>
+        </div>
+    </div>
+
+    <div class="tableDiv customerTable">
+        <table class="table">
+            <thead class="tableHead">
+            <tr class="table-info">
+                <th class="OrderTableHead " scope="col">Customer_Id</th>
+                <th class="OrderTableHead" scope="col">Customer_Name</th>
+                <th class="OrderTableHead" scope="col">Telephone</th>
+                <th class="OrderTableHead" scope="col">City</th>
+            </tr>
+            </thead>
+            <tbody id="orderTable">
+
+            <tr>
+                <th class="orderTableBody" scope="row">2</th>
+                <td class="orderTableBody">Jacob</td>
+                <td class="orderTableBody">Thornton</td>
+                <td class="orderTableBody">@fat</td>
+
+            </tr>
+            <tr>
+                <th class="orderTableBody" scope="row">1</th>
+                <td class="orderTableBody">Mark</td>
+                <td class="orderTableBody">Otto</td>
+                <td class="orderTableBody">@mdo</td>
+
+            </tr>
+            <tr>
+                <th class="orderTableBody" scope="row">3</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">5</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">6</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
+</section>
+
+<!--save Customers modal-->
+<div class="modal" tabindex="-1" id="savecustomer">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add New Customers</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="customer_id" class="form-label ">Customer Id</label>
+                <input type="text" id="customer_id" class="form-control" placeholder="enter id"
+                       aria-label="Customer_Id">
+
+                <label for="customer_name" class="form-label ">Customer Name</label>
+                <input type="text" id="customer_name" class="form-control" placeholder="enter name"
+                       aria-label="customer_Name">
+
+                <label for="city" class="form-label ">City</label>
+                <input type="text" id="city" class="form-control" placeholder="enter your city" aria-label="city">
+
+                <label for="telephone" class="form-label ">Telephone</label>
+                <input type="text" id="telephone" class="form-control" placeholder="enter your number"
+                       aria-label="telephone">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--update Customers modal-->
+<div class="modal" tabindex="-1" id="updatecustomer">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Update Customers</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="c_id" class="form-label ">Customer Id</label>
+                <input type="text" id="c_id" class="form-control" placeholder="enter id" aria-label="Customer_Id">
+
+                <label for="c_name" class="form-label ">Customer Name</label>
+                <input type="text" id="c_name" class="form-control" placeholder="enter name" aria-label="customer_Name">
+
+                <label for="c_city" class="form-label ">City</label>
+                <input type="text" id="c_city" class="form-control" placeholder="enter your city" aria-label="city">
+
+                <label for="c_telephone" class="form-label ">Telephone</label>
+                <input type="text" id="c_telephone" class="form-control" placeholder="enter your number"
+                       aria-label="telephone">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Update</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--delete Customers modal-->
+<div class="modal" tabindex="-1 " id="deletecustomer">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Update Customers</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="id" class="form-label ">Customer Id</label>
+                <input type="text" id="id" class="form-control" placeholder="enter id" aria-label="Customer_Id">
+
+                <label for="name" class="form-label ">Customer Name</label>
+                <input type="text" id="name" class="form-control" placeholder="enter name" aria-label="customer_Name">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary " data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
